--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,15 @@
 # Customize Options: Must Change
 #
 # Title:
-title: Duo, A Simple Jekyll Theme
+title: Auditing Algorithms Lab | Fall 2021
 
 # Where the page will be deployed.
 # If it's https://foo.com/bar, just write "https://foo.com"
-url: "https://chibicode.github.io"
+url: "https://auditlab.stuartgeiger.com"
 
 # If you're deployging to a subdirectory (https://foo.com/bar/)
 # Then write "/bar/". Otherwise, remove this line.
-baseurl: "/duo/"
+baseurl: "/"
 
 # Twitter IDs
 twitter:
