--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Customize Options: Must Change
 #
 # Title:
-title: Auditing Algorithms Lab | UC San Diego | Fall 2021
+title: Auditing Algorithms Lab <br>| UC San Diego | Fall 2021
 
 # Where the page will be deployed.
 # If it's https://foo.com/bar, just write "https://foo.com"
